[FIX] scrollbar bug

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,13 @@ body {
 	color: #edff14;
 	user-select: none;
 	font-family: 'Montserrat', sans-serif;
+	overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+::-webkit-scrollbar {
+    display: none;
+    width: 0px;
 }
 
 #close {
